<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.charley.assignsix.AddPersonActivity"
    tools:showIn="@layout/activity_add_person">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".AddPersonActivity">

        <EditText
            android:hint="@string/fName"
            android:inputType="text|textCapWords|textAutoCorrect"
            android:id="@+id/fName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true" />

        <EditText
            android:id="@+id/lName"
            android:hint="@string/lName"
            android:inputType="text|textCapWords|textAutoCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fName"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/fName"
            android:layout_alignEnd="@id/fName"/>

        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lName"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/lName"
            android:layout_alignEnd="@id/lName"/>

        <EditText
            android:id="@+id/phone"
            android:hint="@string/phone"
            android:inputType="text|phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/email"
            android:layout_alignEnd="@id/email" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subBut"
            android:id="@+id/subBut"
            android:layout_below="@id/phone"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
